# pur

./: .gitignore  Cargo.toml
src/: activation.rs  hyperparameters.rs  layer.rs  lib.rs  loss.rs  model.rs  optimizer.rs  utils.rs
src/gpu_layers/: conv2d.rs  conv2d_shader.wgsl  mod.rs
src/layers/: conv2d.rs  dropout.rs  feed_forward.rs  max_pool.rs  mod.rs
src/shaders/: conv2d.wgsl  conv2d_backward.wgsl  conv2d_forward.wgsl  dropout.wgsl  dropout_backward.wgsl  feed_forward.wgsl  feed_forward_backward.wgsl  max_pool_backward.wgsl  max_pool_forward.wgsl
tests/: layer_tests.rs  model_tests.rs
