[package]
name = "pur"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.0.1"
ndarray = "0.16.1"
rand = "0.9.0"
rand_distr = "0.5.0"
wgpu = "24.0.1"
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
